Trying to fix bold on firefox

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -4,7 +4,7 @@ html {
 
 body {
     color: $text-color;
-    font-weight: 100;
+    font-weight: 200;
 }
 
 abbr {
@@ -29,7 +29,7 @@ sup {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 100;
+    font-weight: 20;
 }
 
 div.equation {
